--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-    "builds": [
-      {
-        "src": "src/backend/api.py",
-        "use": "@vercel/python"
-      },
-      {
-        "src": "src/frontend/**/*",
-        "use": "@vercel/static"
-      }
-    ],
+    "version": 2,
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "src/backend/api.py" },
-      { "source": "/(.*)", "destination": "src/frontend/$1" }
+      { "source": "/api/(.*)", "destination": "/src/backend/api.py" },
+      { "source": "/", "destination": "/src/frontend/index.html" },
+      { "source": "/(.*)", "destination": "/src/frontend/$1" }
     ]
   }
