--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
     "version": 2,
     "builds": [
-      { "src": "src/backend/api.py", "use": "@vercel/python" },
-      { "src": "src/frontend/**/*", "use": "@vercel/static" }
+      { "src": "api.py", "use": "@vercel/python" },
+      { "src": "index.html", "use": "@vercel/static" },
+      { "src": "script.js", "use": "@vercel/static" }
     ],
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "src/backend/api.py" },
-      { "source": "/(.*)", "destination": "src/frontend/$1" }
+      { "source": "/api/(.*)", "destination": "api.py" },
+      { "source": "/(.*)", "destination": "/$1" }
     ]
   }
