--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
     "version": 2,
     "builds": [
       { "src": "api.py", "use": "@vercel/python" },
-      { "src": "index.html", "use": "@vercel/static" },
-      { "src": "script.js", "use": "@vercel/static" }
+      { "src": "*.html", "use": "@vercel/static" },
+      { "src": "*.css", "use": "@vercel/static" },
+      { "src": "*.js", "use": "@vercel/static" }
     ],
     "rewrites": [
       { "source": "/api/(.*)", "destination": "api.py" },
