--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "api.py", "use": "@vercel/python" },
-      { "src": "*.html", "use": "@vercel/static" },
-      { "src": "*.css", "use": "@vercel/static" },
-      { "src": "*.js", "use": "@vercel/static" }
-    ],
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "api.py" },
-      { "source": "/(.*)", "destination": "/$1" }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "run.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "run.py"
+    }
+  ]
 }
